[gd_scene load_steps=5 format=3 uid="uid://cerfh285rmw7l"]

[ext_resource type="Script" path="res://Assets/Scenes/UI/death_report.gd" id="1_2pttt"]
[ext_resource type="Texture2D" uid="uid://d18a0pyir7sef" path="res://Assets/Sprites/death report.png" id="1_bsb1x"]
[ext_resource type="Theme" uid="uid://deqpr6gqjqcms" path="res://Assets/themes/death_report.tres" id="1_vc7x0"]
[ext_resource type="Texture2D" uid="uid://c3fi1o60ol3nr" path="res://Assets/Sprites/Dead Astronaut.jpg" id="3_kxwca"]

[node name="DeathReport" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vc7x0")
color = Color(0, 0, 0, 0.54902)
script = ExtResource("1_2pttt")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -729.0
offset_right = 1942.0
offset_bottom = 1191.0
grow_vertical = 0
rotation = -0.000119686
scale = Vector2(0.562925, 0.400032)
size_flags_horizontal = 0
texture = ExtResource("1_bsb1x")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 300
theme_override_constants/margin_top = 350
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 250

[node name="ColorRect" type="ColorRect" parent="TextureRect/MarginContainer"]
visible = false
layout_mode = 2
color = Color(0.792157, 0.258824, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Name" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PlayerName" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="DeathDate" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Date of death:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="PlayerDeathDate" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "16/12/2023"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CharacterMemories" type="MarginContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="TextureRect/MarginContainer/VBoxContainer/CharacterMemories"]
visible = false
layout_mode = 2
color = Color(0.27451, 0.411765, 0.913725, 1)

[node name="CharacterMemories" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/CharacterMemories"]
unique_name_in_owner = true
layout_mode = 2
text = "Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno est치ndar de las industrias desde el a침o 1500."
fit_content = true

[node name="DeathDescription" type="MarginContainer" parent="TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="TextureRect/MarginContainer/VBoxContainer/DeathDescription"]
visible = false
layout_mode = 2
color = Color(0.27451, 0.411765, 0.913725, 1)

[node name="DeathDescription" type="RichTextLabel" parent="TextureRect/MarginContainer/VBoxContainer/DeathDescription"]
unique_name_in_owner = true
layout_mode = 2
text = "Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno est치ndar de las industrias desde el a침o 1500."
fit_content = true

[node name="TextureRect" type="TextureRect" parent="TextureRect"]
layout_mode = 2
offset_left = 895.255
offset_top = 800.087
offset_right = 2195.26
offset_bottom = 2190.09
rotation = 0.000838335
scale = Vector2(0.632286, 0.632286)
texture = ExtResource("3_kxwca")
